This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/14/25: Fixed adding grid of point "like last time" not setting items as
Acquire (In 4.2).

11/14/24: Added support for Tietz XF216 camera (In 4.2).

11/14/24: Made Shift to Marker work with groups collapsed if current point is
the only one in the group (In 4.2).

11/11/25: SEM_4-2-12
11/11/25: Fixed ability to enter -1 for compression options to SetFileOptions
(In 4.2).

11/11/25: Fixed crash if camera plugin cannot load, broken 10/13/25. (In 4.2).

11/7/25: Fixed camera setup to show only 3 size buttons for Ceta (In 4.2).

11/6/25: Fixed index numbers in Navigator when items are deleted (In 4.2).

11/6/25: Fixed SetBinning, SetCenteredSize, and SetMontageParams to accept
binning 0.5 in Python (In 4.2).

11/3/25: Fixed ReportCameraLength for Thermo in STEM mode (In 4.2).

11/3/25: SEM_4-2-11 
11/3/25: Fixed using tilt series selections for scripts to run before/after
when acquisition is started with StartNavAcquireAtEnd (In 4.2).

10/29/25: Fixed entering TIFF, JPEG, or -1 for compression with SnapshotToFile
(In 4.2).

10/23/25: Fixed crash doing cassette inventory on JEOL (In 4.2).

10/16/25: Fixed crash aligning lower mag to higher mag image with the latter 
loaded as bytes (In 4.2).

10/15/25: Fixed Step To & Adjust IS to shift to first hole when starting the
procedure manually, broken 10/30/24 (In 4.2).

10/15/25: SEM_4-2-10
10/13/25: Fixed SetDoseFracParams to control frame saving for DE cameras
(In 4.2).

10/12/25: Fixed bad stage positions (particularly Z) being recorded on JEOL at
the end of stage movements, broken 8/19/25 (In 4.2).

10/3/25: Fixed hang setting screen position on a JEOL F200 at start of Low
Dose tilt series using JEOL STEM (In 4.2).

9/24/25: SEM_4-2-9