@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+11/20/25: Fixed finishing focus ramp for TVIPS STEM, and requesting more than
+one channel in continuous mode for FEI STEM through UTAPI (In 4.2).
+
 11/14/25: Fixed adding grid of point "like last time" not setting items as
 Acquire (In 4.2).
 
